--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
-    "postinstall": "npm install --legacy-peer-deps",
+    "build": "next build --legacy-peer-deps",
     "start": "next start",
     "lint": "next lint"
   },
