--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
     "@phosphor-icons/react": "^2.1.7",
     "motion": "^12.0.0-alpha.2",
     "next": "^15.1.2",
-    "next-intl": "^3.26.2",
+    "next-intl": "^3.26.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-focus-lock": "^2.13.5",
     "react-remove-scroll": "^2.6.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
     "@types/node": "^20.17.10",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
-    "eslint": "^8.57.1",
+    "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.2",
     "typescript": "^5.7.2"
   }
