--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
-    "motion": "^12.0.0-alpha.2",
+    "motion": "^11.15.0",
     "next": "^15.1.2",
     "next-intl": "^3.26.3",
     "react": "^19.0.0",
