--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@phosphor-icons/react": "^2.1.7",
-    "motion": "^12.3.1",
-    "next": "^15.1.6",
-    "next-intl": "^3.26.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-focus-lock": "^2.13.5",
-    "react-remove-scroll": "^2.6.3"
+    "@phosphor-icons/react": "^2.1.10",
+    "motion": "^12.23.12",
+    "next": "^15.5.0",
+    "next-intl": "^3.26.5",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-focus-lock": "^2.13.6",
+    "react-remove-scroll": "^2.7.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@types/node": "^20.17.17",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "eslint": "^9.19.0",
-    "eslint-config-next": "^15.1.6",
-    "typescript": "^5.7.3"
+    "typescript": "^5.9.2",
+    "@types/node": "^20.19.11",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "^15.5.0",
+    "@eslint/eslintrc": "^3.3.1"
   }
 }
