--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "@phosphor-icons/react": "^2.1.10",
     "motion": "^12.23.12",
     "next": "^15.5.0",
-    "next-intl": "^3.26.5",
+    "next-intl": "^4.3.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-focus-lock": "^2.13.6",
     "react-remove-scroll": "^2.7.1"
   },
   "devDependencies": {
-    "typescript": "^5.9.2",
+    "@eslint/eslintrc": "^3.3.1",
     "@types/node": "^20.19.11",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "eslint": "^9.33.0",
     "eslint-config-next": "^15.5.0",
-    "@eslint/eslintrc": "^3.3.1"
+    "typescript": "^5.9.2"
   }
 }
