--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
-    "motion": "^12.23.12",
-    "next": "^15.5.2",
-    "next-intl": "^4.3.5",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "motion": "^12.23.24",
+    "next": "16.0.1",
+    "next-intl": "^4.4.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-focus-lock": "^2.13.6",
     "react-remove-scroll": "^2.7.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@types/node": "^20.19.11",
-    "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.8",
-    "eslint": "^9.34.0",
-    "eslint-config-next": "^15.5.2",
-    "typescript": "^5.9.2"
+    "@types/node": "^24.10.0",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "eslint": "^9.39.0",
+    "eslint-config-next": "16.0.1",
+    "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2"
   }
 }
