--- a/package.json
+++ b/package.json
@@ -11,24 +11,20 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
     "motion": "^12.23.24",
-    "next": "16.0.1",
-    "next-intl": "^4.5.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.3",
+    "next-intl": "^4.5.3",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-focus-lock": "^2.13.6",
     "react-remove-scroll": "^2.7.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@types/node": "^24.10.0",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.4",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.1",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.0.3",
     "typescript": "^5.9.3"
-  },
-  "overrides": {
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2"
   }
 }
