--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# local env files
-.env*.local
+# env files (can opt-in for committing if needed)
+.env*
 
 # vercel
 .vercel
@@ -41,5 +42,4 @@ next-env.d.ts
 
 # My shit
 apuntes.md
-/.vscode
 .vscode
